--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,14 @@ ul {
   margin-top:30px;
 }
 
-
 ul li {
   display:inline-block;
   font-size:30px;
   margin-left:20px;
+ }
+
+ ul li a {
+ 	text-decoration:none;
  }
 
 
