--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,12 @@ body {
   font-size: 15px;
 }
 
+h2 {
+	font-size: 30px;
+	margin: 0 0 20px 10px;
+	text-decoration: underline;
+}
+
 ul {
   text-align: center;
   margin-top:30px;
