added css style to a "registration success"

--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,10 @@ ul li {
 
 .registeredSoldBooks {
 	display: none;
+	background-color:green;
+	width:350px;
+	padding:10px;
+	margin-bottom:10px;
 }
 
 .cancelSoldRegistering {
