--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,10 @@ ul li {
  	text-decoration:none;
  }
 
+ span{
+ display:none;
+ }
+ 
 .registerBook, .soldBookRegister, .updatePrice {
 	margin: 60px;
 }
@@ -52,6 +56,7 @@ ul li {
 .registeringNotify .registeredSuccess, .soldRegisteringNotify .soldRegisteredSuccess, .UpdatePriceNotify .updatePriceSuccess {
 	background-color: #7EDD1E;
 	padding: 5px;
+	
 }
 
 .registeringNotify .registeredError, .soldRegisteringNotify .soldRegisteredError, .UpdatePriceNotify .updatePriceError {
@@ -75,16 +80,12 @@ ul li {
 }
 
 .registeredSoldBooks {
-	display: none;
 	background-color:green;
 	width:350px;
 	padding:10px;
 	margin-bottom:10px;
 }
 
-.cancelSoldRegistering {
-	display: none;
-}
 
 .bookNoExist{
 	background-color:#FA2525;
