--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ ul li {
 	margin-bottom: 10px;
 }
 
-.registeringNotify div, .soldRegisteringNotify div, .UpdatePriceNotify div {
+/*.registeringNotify div, .soldRegisteringNotify div, .UpdatePriceNotify div {
 	display: none;
 }
 
@@ -62,7 +62,7 @@ ul li {
 .registeringNotify .registeredError, .soldRegisteringNotify .soldRegisteredError, .UpdatePriceNotify .updatePriceError {
 	background-color: #FA2525;
 	padding: 5px;
-}
+}*/
 
 .cancelRegistering, .cancelSoldRegistering, .cancelUpdatePrice {
 	margin: 10px;
@@ -79,15 +79,21 @@ ul li {
 	margin-top: 100px;
 }
 
-.registeredSoldBooks {
-	background-color:green;
+.registeredSoldBooks, .registeredNewBook {
+	background-color: #7EDD1E;
 	width:350px;
 	padding:10px;
 	margin-bottom:10px;
 }
 
+.bookFound {
+	background-color: #FFFF19;
+	width:350px;
+	padding:10px;
+	margin-bottom:10px;
+}
 
-.bookNoExist{
+.bookNoExist {
 	background-color:#FA2525;
 	width:350px;
 	padding:10px;
