--- a/css/main.css
+++ b/css/main.css
@@ -57,12 +57,12 @@ ul li {
 	background-color: #7EDD1E;
 	padding: 5px;
 	
-}
+}*/
 
-.registeringNotify .registeredError, .soldRegisteringNotify .soldRegisteredError, .UpdatePriceNotify .updatePriceError {
+.soldRegisteredError, .UpdatePriceNotify .updatePriceError {
 	background-color: #FA2525;
 	padding: 5px;
-}*/
+}
 
 .cancelRegistering, .cancelSoldRegistering, .cancelUpdatePrice {
 	margin: 10px;
