created html and css for the report (title earnings per week, month or year), need to talk to hugo in order to fix a javascript and a mysql question, view;

--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,13 @@ isbnSearch {
 	padding:10px;
 	margin-bottom:10px;
 }
-
+ .report {
+	display: inline block;
+	background: white;
+	width: 70vw;
+	height: 300px;
+	z-index: 10;
+}
 .bookNoExist, .updatePriceError, .cancelSoldRegistering {
 	background-color:#FA2525;
 	width:350px;
