--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ isbnSearch {
 .report {
 	display: inline-block;
 	background: white;
-	width: 70vw;
+	width: 500px;
 	height: 300px;
 	z-index: 10;
 }
