Added a missing user msg for check if isbn exist, when isbn doesn't exist

--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ a:hover {
 	margin-bottom: 10px;
 }
  
-.bookNoExist, .updatePriceError, .cancelSoldRegistering, .noMatch {
+.bookNoExist, .updatePriceError, .cancelSoldRegistering, .noMatch, .noIsbnFound {
 	position: absolute;
 	bottom: 10%;
 	right: 10%;
